# deckeditor

./: .gitignore  .todo  base_requirements.txt  build_setup.bat  editor.py  editor.spec  editormodels.py  linux_build.sh  linux_build_setup.sh  linux_package.sh  linux_rebuild.sh  linux_recompile_installed.sh  linux_reinstall.sh  linux_requirements.txt  pyproject.toml  requirements.txt  setup.py  todo  win_install.md  windows_requirements.txt
cardcontainers/: card.py  cardcontainer.py  graphicpixmapobject.py
cardcontainers/alignement/: stacking.py
cardwidget/: embedableSurface.py  multiCardWidget.py
deckeditor/: editor.py  paths.py  values.py
deckeditor/actions/: main.py
deckeditor/application/: embargo.py
deckeditor/authentication/: login.py
deckeditor/cardadd/: cardadder.py
deckeditor/cardcollection/: cardcollection.py
deckeditor/cardcontainers/: cardcontainer.py  cardwidget.py  deckzone.py  deckzonewidget.py  graphicpixmapobject.py  physicalcard.py  selection.py
deckeditor/cardview/: cardview.py  widget.py
deckeditor/commands/: cards.py
deckeditor/containers/: magic.py
deckeditor/context/: context.py  serialize.py  sql.py
deckeditor/controllers/: matches.py
deckeditor/cubeview/: cubelistview.py
deckeditor/dbload/: load.py
deckeditor/decklistview/: decklistwidget.py
deckeditor/generate/: dialog.py
deckeditor/models/: deck.py  listtable.py  sequence.py
deckeditor/notifications/: frame.py  notification.py  notifyable.py
install/: embargo-edit.desktop  install_script.sh  uninstall_script.sh
pixmapload/: pixmaploader.py
(+154 files in other folders)
